# Vralogix-AetherSeed-OSINT

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.index/: README.md  architecture.md  context-refresh-log.md  dead-code.md  file-inventory.md  key-decisions.md
aetherseed/: __init__.py  cli.py  config.py  errors.py  logging.py  schemas.py
aetherseed/apps/: __init__.py
aetherseed/apps/api/: main.py  service.py
aetherseed/apps/web/: README.md  __init__.py  streamlit_app.py
aetherseed/apps/worker/: __init__.py  tasks.py
aetherseed/core/: __init__.py  interfaces.py  nlp.py
aetherseed/core/acquisition/: __init__.py  browser.py  crawler.py  downloader.py  extract.py  fetcher.py  ratelimit.py  robots.py  search.py  security.py
aetherseed/core/ai/: __init__.py  backend.py  engine.py  prompts.py  schemas.py
aetherseed/core/enrichment/: __init__.py  enrichers.py
aetherseed/core/graph/: __init__.py  factory.py  money.py  neo4j_store.py  resolution.py  store.py
aetherseed/core/rag/: __init__.py  index.py  retrieval.py
aetherseed/core/seeding/: __init__.py  budget.py  engine.py  rules.py
aetherseed/core/storage/: __init__.py  asset_store.py  audit.py  db.py  models.py  repositories.py
aetherseed/pipelines/: __init__.py  investigation.py
apps/web/frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
apps/web/frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/frontend/components/: GraphView.tsx  InvestigationForm.tsx  LeadsTable.tsx
apps/web/frontend/lib/: api.ts  graph.ts
config/: seed_rules.yaml
db/: env.py
db/versions/: fbd9bc9e1ef8_initial_schema.py
docker/: Dockerfile
docs/adr/: 0001-local-first-graceful-degradation.md  0002-playwright-primary-scrapy-optional.md  0003-networkx-default-neo4j-optional.md  0004-ollama-http-local-first-ai.md  0005-structured-output-json-repair.md  0006-hybrid-rag-grounding.md  README.md
prompts/: entity_extraction.md  gap_analysis.md  lead_scoring.md  seed_expansion.md
scripts/: push_all.ps1  push_all.sh
tests/: conftest.py  fakes.py  test_ai.py  test_api.py  test_audit.py  test_cli.py  test_config_errors_schemas.py  test_crawler.py  test_downloader.py  test_enrichers.py  test_extract.py  test_fetcher.py  test_graph.py  test_graph_neo4j.py  test_money.py  test_nlp.py  test_pipeline_e2e.py  test_rag.py  test_resolution.py  test_search.py  test_security_ssrf.py  test_seeding.py
