[project]
name = "aetherseed"
version = "0.1.0"
description = "Veralogix AetherSeed OSINT — local-first, resilient, auditable investigative research platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "PolyForm-Noncommercial-1.0.0 OR Commercial" }
authors = [{ name = "Veralogix Group" }]
keywords = ["osint", "investigation", "scraping", "knowledge-graph", "local-first"]

# Core dependencies: the platform runs end-to-end with ONLY these installed.
# Everything that needs an external service (Ollama, a browser, Redis, Postgres)
# lives in an optional extra and degrades gracefully when absent.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "structlog>=24.4",
    "typer>=0.13",
    "rich>=13.9",
    "tenacity>=9.0",
    "rapidfuzz>=3.10",
    "networkx>=3.4",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "prometheus-client>=0.21",
    "tldextract>=5.1",
]

[project.optional-dependencies]
# Local AI stack (Ollama + local embeddings + vector store). Heavy; opt-in.
ai = [
    "ollama>=0.4",
    "instructor>=1.6",
    "sentence-transformers>=3.3",
    "chromadb>=0.5.20",
]
# Headless browser for JS-rendered pages + screenshots. Run `playwright install`.
browser = ["playwright>=1.49"]
# Distributed task queue + cache.
queue = ["celery>=5.4", "redis>=5.2"]
# Production database driver.
postgres = ["psycopg[binary]>=3.2"]
# Persistent graph backends.
graph = ["neo4j>=5.27", "python-louvain>=0.16"]
# Document/report generation.
report = ["markdown-it-py>=3.0", "weasyprint>=63.0"]
# Rapid internal web UI (Streamlit). A Next.js app can live in apps/web instead.
web = ["streamlit>=1.40"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "hypothesis>=6.122",
    "respx>=0.21",
    "types-PyYAML>=6.0",
    "types-python-dateutil>=2.9",
]

[project.scripts]
aetherseed = "aetherseed.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aetherseed"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]
exclude = ["db/versions/", "tests/fixtures/"]

# Optional third-party libs without complete stubs.
[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "bs4.*",
    "ollama.*",
    "instructor.*",
    "chromadb.*",
    "sentence_transformers.*",
    "playwright.*",
    "community.*",
    "neo4j.*",
    "tldextract.*",
    "prometheus_client.*",
    "celery.*",
    "streamlit.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 110
src = ["aetherseed", "tests"]
extend-exclude = ["db/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC", "S", "RUF"]
ignore = ["S101", "S311", "B008"]  # assert in tests; non-crypto random; typer Depends-in-default

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["aetherseed"]
omit = ["aetherseed/apps/web/*", "db/*"]
